--- a/main.html
+++ b/main.html
@@ -34,7 +34,7 @@
         </section>
         
         <section class="info">
-            <h2>About Me</h2>
+            <h2>About me</h2>
             <p>A passionate developer with a strong background in web development and programming.</p>
         </section>
         
